# tree-sitter-vim9

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  keywords.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-vim.pc.in
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vim/: __init__.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  keywords.h  node-types.json  parser.c  scanner.c
