[package]
name = "tree-sitter-vim"
description = "tree-sitter vimscript9 parser"
version = "0.1.0"
authors = ["beamiter <beamiter@163.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vim"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/beamiter/tree-sitter-vim9"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
